--- a/app/package.json
+++ b/app/package.json
@@ -2,10 +2,10 @@
     "name": "mean",
     "version": "0.1.0",
     "dependencies": {
-        "express":  "latest",
-        "ejs":      "latest",
-        "mongoose": "latest",
-        "winston":  "latest"
+        "express":     "latest",
+        "body-parser": "latest",
+        "mongoose":    "latest",
+        "winston":     "latest"
     },
     "author": "JB jeromebourgeais.pro@gmail.com",
     "description": "Simple Mean stack"
